Fix created by wrap / Fix duplicate user lookup in admin

--- a/frontend/src/styles/pages/media.scss
+++ b/frontend/src/styles/pages/media.scss
@@ -454,9 +454,14 @@
 
     .media-crew {
       display: flex;
+      flex-wrap: wrap;
 
       &--item {
-        margin: 0 50px 15px 0;
+        margin: 0 30px 15px 0;
+
+        @include media-breakpoint-up(lg) {
+          margin: 0 50px 15px 0;
+        }
       }
 
       .crew {
